fix audio component and spacings

--- a/src/styles/About.module.css
+++ b/src/styles/About.module.css
@@ -9,6 +9,10 @@
     grid-column: 1 / span 12;
 }
 
+.artistContainer {
+    margin-bottom: calc(var(--space) * 1.3);
+}
+
 .cvContainer {
     display: grid;
     grid-row: 2 / span 1;
